<resources>
    <string name="app_name">ComisariaApp</string>
    <string name="btn_ver_mas">Ver más</string>
    <string name="btn_ingresar_denuncia">Ingresar denuncia</string>
    <string name="textoTrámite">Hola, Usuario. Aquí puedes registrar tu trámite virtual, recuerda poner
    un correo electronico válido para poder recibir el código de tu trámite y poder hacer seguimiento.</string>
    <string name="titulotramite"><u>Datos Generales</u></string>
    <string name="estadoTramite">Estimado, Usuario. Aquí puedes consultar el estado de tu trámite virtual
    ingresando el código de tu trámite que se te envió en tu correo electronico.</string>
    <string name="estadoDenuncia">Estimado, Usuario. Aquí puedes consultar el estado de tu denuncia virtual
    ingresando el código de tu denuncia que se te envió en tu correo electronico.</string>
    <string name="tituloDenuncia"><u>Datos de la denuncia</u></string>
    <string name="tituloAgraviado"><u>Datos del Agraviado(a)</u></string>
    <string name="fechaHechos">Fecha Hechos</string>
    <string name="referenciaD">Referencia al lugar de los hechos</string>
    <string name="direccionD">Direccón y/o lugar de los hechos</string>
    <string name="numIden">Núm. Identificación</string>
    <string name="dirA">Dirección y referencias del domicilio real</string>
    <string name="relateP">Relate los detalles de protección</string>
    <string name="hechosD">Relate los hechos a denunciar</string>
    <string name="tituloDenunciado"><u>Datos del Denunciado(a)</u></string>
    <string name="terminoDenuncias">Las denuncias y trámites ingresados a través del aplicativo móvil
    por defecto siempre se enviarán como pendientes hasta que un personal de la policía pueda atender el caso, y
    ponerse en contacto con usted.</string>
    <string name="aviso"><u>Aviso Importante!</u></string>
    <string name="titulopersonasagregadasA">Agraviados(as)</string>
    <string name="titulopersonasagregadasD">Denunciados(as)</string>
    <string name="titulospinnertramite">Seleccione Tipo Trámite</string>
    <string name="tituloformularioagraviado"><u>Datos del usuario</u></string>
    <string name="titulomisdenuncias">Hola, usuario(a), aquí puedes visualizar todas tus
        denuncias realizadas mediante esta aplicación.</string>
    <string name="titulomistramites">Hola, usuario(a), aquí puedes visualizar todos tus
        trámites realizados mediante esta aplicación.</string>
    <string name="titulodenuncias"><u>Mis Denuncias</u></string>
    <string name="titulotramites"><u>Mis Trámites</u></string>
    <string name="colaboración">Hola, Usuario, Tú opinión es muy importante para nosotros, comentamos en que aspecto deberíamos mejorar
    para ofrecerles una mejor experencia de usuario. Marca el número de estrellas para calificar la aplicación y dejanos un comentario..</string>
    <string name="sugerenciatxt">Me gusta está aplicación, es muy buena y satisface todas mis necesidades, me gustaría que la experiencia de usuario mejorará un poco más. Excelente a los desarrolladores.</string>
    <string name="ubicanosResource">Primero que nada queremos agradecerte por descargarte esta app, con ella podrás realizar y gestionar tus denuncias y trámites</string>
    <string name="emerPolC">Emergencia Policía Carreteras</string>
    <string name="correo_comisaria_jlo">rplambayeque.comdelafamilia@pnp.gob.pe</string>
    <string name="direccion_comisaria">4 De Noviembre 186-110, José Leonardo Ortiz 14004</string>
    <string name="tituloPagInf">¿Qué deseas leer Hoy?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="denuncia">Denuncia</string>
    <string name="agraviados">Agraviados</string>
    <string name="denunciados">Denunciados</string>
    <string name="resumen">Resumen</string>
    <string name="faltan_datos">Faltan datos ?</string>
    <string name="alerta_refresh">Si no visualiza los datos de agraviados o denunciados agregados recientemente en las listas haga clic en el boton forzar actualización.</string>
    <string name="no_recuerdo_denunciado">No recuerdo el tipo, ni el número del documento.</string>
</resources>